sdk_tests/tests/pbc_contract_codegen/fail/state_macro_not_on_enum.rs
#![no_main]
use pbc_contract_codegen::state;

pub fn main() {}

#[state]
enum MyEnum {
    A,
    B,
    C,
}
